--- a/criarperitagem.html
+++ b/criarperitagem.html
@@ -6,7 +6,7 @@
     <title>Criar Peritagem</title>
     <link rel="stylesheet" href="criarperitagem.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.12/jspdf.plugin.autotable.min.js"></script> <!-- Adicionado para autoTable -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.12/jspdf.plugin.autotable.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -25,7 +25,6 @@
                 <input type="text" id="ss" maxlength="6" placeholder="SS" required>
                 <select id="id">
                     <option value="" disabled selected>ID</option>
-                    <!-- Opções de ID de 1 a 50 -->
                     <script>
                         for (let i = 1; i <= 50; i++) {
                             document.write('<option value="' + i + '">' + i + '</option>');
@@ -57,9 +56,7 @@
             </select>
         </div>
         <div id="opcoesPeca" class="hidden">
-            <div class="acoes-container">
-                <!-- As opções serão adicionadas aqui com JavaScript -->
-            </div>
+            <div class="acoes-container"></div>
             <div class="medidas-container hidden">
                 <label for="diametro">Diâmetro (mm):</label>
                 <input type="number" id="diametro" placeholder="Diâmetro (mm)" required>
@@ -79,15 +76,12 @@
                     <th>Diâmetro (mm)</th>
                     <th>Comprimento (mm)</th>
                     <th>Largura (mm)</th>
-                    <th>Ação</th> <!-- Coluna para excluir -->
+                    <th>Ação</th>
                 </tr>
             </thead>
-            <tbody>
-                <!-- As linhas da tabela serão adicionadas aqui -->
-            </tbody>
+            <tbody></tbody>
         </table>
 
-        <!-- Botão para anexar arquivos -->
         <div class="form-group">
             <label for="anexos">Anexar Arquivos:</label>
             <input type="file" id="anexos" accept="image/*" multiple>
